Fri Oct 16 14:56:10 CEST 2009 (tk)
----------------------------------
 * clamdscan: fix some output msgs (bb#1716)

Tue Oct  6 22:51:00 CEST 2009 (tk)
----------------------------------
 * shared/misc.h: #include <sys/types.h>

Fri Oct  2 21:01:51 CEST 2009 (tk)
----------------------------------
 * libclamav: check file sizes for MD5 sigs in all cases
	      Reported by Edwin

Fri Oct  2 14:33:09 CEST 2009 (tk)
----------------------------------
 * libclamav/scanners.c: fix whitelisting of scripts (bb#1706)

Wed Sep 30 19:41:43 EEST 2009 (edwin)
-------------------------------------
 * configure{.in,}: Only use -fno-strict-aliasing for gcc-4.3+ to avoid bugs
    with older compilers (bb #1581)

Tue Sep 29 21:40:29 CEST 2009 (tk)
----------------------------------
 * libclamav/matcher-ac.c: fix matching of logical sigs (bb#1707)
			   Reported by Thiyaga <mthiyaga*corp.untd.com>

Mon Sep 28 21:41:47 CEST 2009 (tk)
----------------------------------
 * libclamav/readdb.c: fix handling of broken .ldb sigs (bb#1701)
		       Thanks Luca&Edwin

Fri Sep 25 00:35:56 CEST 2009 (acab)
------------------------------------
 * libclamav/sis.c: size check fix, thanks Tomasz

Mon Sep 14 13:56:42 CEST 2009 (tk)
----------------------------------
 * clamd/server-th.c: fix possible race condition when restarting clamuko
		      (bb#1692), patch from John Ogness

Thu Sep  3 15:09:57 CEST 2009 (tk)
----------------------------------
 * freshclam/mirman.c: make backoff time proportional to FLEVEL (bb#1687)

Mon Aug 24 22:09:12 CEST 2009 (tk)
----------------------------------
 * libclamav: improve handling of PDF files (bb#1682)

Fri Aug 21 00:56:03 CEST 2009 (acab)
------------------------------------
 * build system: upgrade to autoconf 2.64 and automake 1.11 (bb#1528)

Wed Aug  5 18:33:11 CEST 2009 (tk)
----------------------------------
 * clamd/clamd.c: ignore SIGHUP and SIGUSR2 during initial setup (bb#1671)

Tue Aug  4 23:15:26 CEST 2009 (tk)
----------------------------------