@@ -1,3 +1,7 @@
+Fri Oct 23 20:48:12 CEST 2009 (acab)
+------------------------------------
+ * libclamav/unarj: fix error path leaks and valgrind warnings
+
 Fri Oct 16 14:56:10 CEST 2009 (tk)
 ----------------------------------
  * clamdscan: fix some output msgs (bb#1716)
